[package]
name = "neon-example"
version = "0.1.0"
authors = ["Rajat Talwar <cuterajat26@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_example"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
num_cpus = "1.4.0"